--- a/public/tlandingPage/assets/css/demo5.css
+++ b/public/tlandingPage/assets/css/demo5.css
@@ -24662,9 +24662,16 @@ section.ec-instagram-section {
     visibility: visible;
 }
 
-
-
 .active .carousel-item__image {
     transition: 0.6s all ease-in-out;
     transform: translateX(0);
+}
+
+/* Revamp .*/
+.about-image {
+    height: 80%;
+}
+
+.main-image {
+    border-radius: 15px;
 }
