--- a/public/tlandingPage/assets/css/demo5.css
+++ b/public/tlandingPage/assets/css/demo5.css
@@ -24676,3 +24676,12 @@ section.ec-instagram-section {
 .about-content {
     margin-left: 20px;
 }
+
+.ec-test-outer .partnership {
+    display: flex;
+}
+
+.content p {
+    font-size: 16px;
+    font-weight: 500;
+}
