--- a/public/tlandingPage/assets/scss/pages/_demo5.scss
+++ b/public/tlandingPage/assets/scss/pages/_demo5.scss
@@ -4936,3 +4936,23 @@ section.ec-instagram-section {
     }
   }
 }
+
+
+/* Revamp .*/
+
+.main-image {
+    border-radius: 15px;
+}
+
+.about-content {
+    margin-left: 20px;
+}
+
+.ec-test-outer .partnership {
+    display: flex;
+}
+
+.content p {
+    font-size: 16px;
+    font-weight: 500;
+}
