--- a/public/tlandingPage/assets/css/demo5.css
+++ b/public/tlandingPage/assets/css/demo5.css
@@ -24685,3 +24685,5 @@ section.ec-instagram-section {
     font-size: 16px;
     font-weight: 500;
 }
+
+.owl-item {width: 128.906px; margin-right: 10px; background:powderblue; }
