--- a/public/tlandingPage/assets/scss/pages/_demo5.scss
+++ b/public/tlandingPage/assets/scss/pages/_demo5.scss
@@ -4956,3 +4956,5 @@ section.ec-instagram-section {
     font-size: 16px;
     font-weight: 500;
 }
+
+.owl-item {width: 128.906px; margin-right: 10px; background:powderblue; }
