--- a/public/tlandingPage/assets/scss/pages/_demo5.scss
+++ b/public/tlandingPage/assets/scss/pages/_demo5.scss
@@ -4958,3 +4958,7 @@ section.ec-instagram-section {
 }
 
 .owl-item {width: 128.906px; margin-right: 10px; background:powderblue; }
+
+.load-more {
+    display: block;
+}
